tests/NormalTests/paczka1/fuzzy1/48096561.err
Error in line 3: 9AuXgEUEJx S864 34,3
Error in line 5: S864 A666 98,4
Error in line 8: 2FvHE9ZlvEu S864 6,5
Error in line 15: S864 A666 42,1
Error in line 25: A7G5B4 S224 30,7
Error in line 26: A7G5B4 A666 54,3
Error in line 40: S864 S58 105,29
